--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "About",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "http://github.com/aneldev/dyna-ui-input-slider"
   },
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
@@ -31,7 +31,7 @@
   "author": "Anel dev",
   "license": "MIT",
   "dependencies": {
-    "dyna-ui-styles": "^1.3.3",
+    "dyna-ui-styles": "^1.3.10",
     "rc-slider": "^8.6.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
