--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dyna-ui-input-slider",
   "version": "1.0.1",
-  "description": "About",
+  "description": "Slider input control",
   "repository": {
     "type": "git",
     "url": "http://github.com/aneldev/dyna-ui-input-slider"
