--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Anel dev",
   "license": "MIT",
   "dependencies": {
+    "dyna-class-name": "^2.1.2",
     "dyna-ui-styles": "^1.3.16",
     "rc-slider": "^8.6.1",
     "react": "^16.4.1",
