--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "MIT",
   "dependencies": {
     "dyna-class-name": "^2.1.2",
+    "dyna-loops": "^1.7.1",
     "dyna-ui-styles": "^1.3.16",
     "rc-slider": "^8.6.1",
     "react": "^16.4.1",
